# django_app

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
HTML_CSS/: index.html  script.js  style.css
logging/: README.md
training_django_project/: Dockerfile  docker-compose.yaml  manage.py  requirements.txt
training_django_project/blogapp/: admin.py  models.py  urls.py  views.py
training_django_project/blogapp/migrations/: 0001_initial.py  0002_alter_article_content_alter_article_pub_date.py
training_django_project/fixtures/: data.json
training_django_project/myapiapp/: apps.py  serializers.py  urls.py  views.py
training_django_project/myauth/: forms.py  models.py  tests.py  urls.py  views.py
training_django_project/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_user.py
training_django_project/requestdataapp/: forms.py  urls.py  views.py
training_django_project/requestdataapp/middlewares/: count_request_middleware.py  throttling_middleware.py  useragent_middleware.py
training_django_project/shopapp/: admin.py  admin_mixins.py  api.py  common.py  forms.py  models.py  sitemap.py  tests.py  urls.py  views.py
training_django_project/shopapp/fixtures/: order-fixtures.json  product-fixtures.json  user-fixtures.json
training_django_project/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0012_order_receipt.py  (+6 more)
training_django_project/training_django_project/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
(+44 files in other folders)
