[project]
name = "training-django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "master",email = "chuk1976@mail.ru"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-debug-toolbar (>=6.3.0,<7.0.0)",
    "django-filter (>=25.2,<26.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "asgiref (>=3.11.1,<4.0.0)",
    "attrs (>=26.1.0,<27.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "click (>=8.3.3,<9.0.0)",
    "docutils (>=0.22.4,<0.23.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-docstrings (>=1.7.0,<2.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "jsonschema-specifications (>=2025.9.1,<2026.0.0)",
    "mccabe (>=0.7.0,<0.8.0)",
    "mypy-extensions (>=1.1.0,<2.0.0)",
    "packaging (>=26.2,<27.0)",
    "pathspec (>=1.1.1,<2.0.0)",
    "platformdirs (>=4.9.6,<5.0.0)",
    "pycodestyle (>=2.14.0,<3.0.0)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "pyflakes (>=3.4.0,<4.0.0)",
    "pytokens (>=0.4.1,<0.5.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "referencing (>=0.37.0,<0.38.0)",
    "rpds-py (>=0.30.0,<0.31.0)",
    "snowballstemmer (>=3.0.1,<4.0.0)",
    "sqlparse (>=0.5.5,<0.6.0)",
    "uritemplate (>=4.2.0,<5.0.0)"
]

[tool.poetry]
packages = [
    { include = "training_django_project" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
